# pysysdc

./: .travis.yml  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  build.sh  clean.sh  pyproject.toml  setup.cfg  setup.py  stdeb.cfg  unit_test.py
.github/workflows/: python-publish.yml
etc/dbus-1/: system-local.conf
pysysdc/: __init__.py  __version__.py  connect.c  connect.h  dc_error_handling.c  dc_error_handling.h  debug.h  helpers.c  helpers.h  methods.py  pysysdc.c  python_runner.c  python_runner.h  sd_python_runner.c  sd_python_runner.h  sdbus.c  sdbus.h  sdbus.py  sdreply.py  signals.c  signals.h  systemctl.py  systemd_methods.c  systemd_methods.h  unit.py  variant.c  variant.h
scripts/: dcbus
tests/: client_backward_compatibility_test.py  client_test.py  knocker_test.py  server_backward_compatibility_test.py  server_test.py  systemctl_test.py  test.py  unit_test.py
