[project]
authors = [
    {name = "Andrey Bagrintsev", email = "andrey@bagrintsev.me"},
    {name = "Oleksandr Avdieiev", email = "avdieev@gmail.com"}
]
maintainers = [
    {name = "Andrey Bagrintsev", email = "andrey@bagrintsev.me"}
]

[tool.cibuildwheel]
build = "*-manylinux*"
manylinux-x86_64-image = "manylinux_2_24"
manylinux-i686-image = "manylinux_2_24"
#musllinux-x86_64-image = "musllinux_1_1"
#musllinux-i686-image = "musllinux_1_1"

[tool.cibuildwheel.linux]
before-all = [
  "apt-get update -y",
  "apt-get install -y libsystemd-dev"
]
